# islamic-texts

./: .gitignore  README.md  index.html  smallscreen.html  style.css
content/content/: dua-amanabillah.txt  dua-amanabillah.yaml  dua-ashlahallah.txt  dua-astaghfirullahrabbalbaraaya.txt  dua-astaghfirullahrabbalbaraaya.yaml  dua-audzubikalimatillah.txt  dua-bismillahi-bimasyiatillah.txt  dua-bismillahi-bimasyiatillah.yaml  dua-bismillahilladzilaayadhurru.txt  dua-husnulkhatimah.txt  dua-husnulkhatimah.yaml  dua-nasalukaridhaka.txt  dua-nasalukaridhaka.yaml  dua-rabbanaghfirlana.txt  dua-rabbanaghfirlana.yaml  dua-radhiinaabillah.txt  dua-radhiinaabillah.yaml  dua-ratib-alhaddad-01.txt  dua-ratib-alhaddad-01.yaml  dua-ratib-alhaddad-02.txt  dua-ratib-alhaddad-02.yaml  dua-shalawat.txt  dua-ya'aalimasirriminna.txt  dua-yaaaliyyuyaakabiiru.txt  dua-yaaaliyyuyaakabiiru.yaml  dua-yaafaarijalhammi.txt  dua-yaalathifal.txt  dua-yaalathifal.yaml  dua-yaaqowiyyu.txt  dua-yadzaljalaali-diinilislaam.txt  dua-yadzaljalaali-diinilislaam.yaml  dua-yarabbana-kaanaminna.txt  dua-yarhamarraahimin.txt  dua-yarhamarraahimin.yaml  dzikir-haqqulma'bud.txt  dzikir-laailaahaillallan2x.txt  dzikir-laailaahaillallan2x.yaml  dzikir-lailaahaillallah-qadir.txt  dzikir-lailaahaillallah-qadir.yaml  dzikir-subhanallah-akbar.txt  (+22 more)
content/data/: license.yaml  typesetter.yaml
experiment/: exp01.tex  exp02.tex
generator/: classic-prima.py  resume.json  temp-resume.tex
texgen/: CMakeLists.txt  CMakePresets.json  docprinter.hpp  document.cpp  document.hpp  main.cpp  vcpkg.json
(+40 files in other folders)
